fixing z-index

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -82,6 +82,7 @@ body {
 #my-links-container {
   top: 20px;
   right: 106px;
+  z-index: 1;
 }
 
 #my-links > a {
